--- a/scripts/style.css
+++ b/scripts/style.css
@@ -7,12 +7,19 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     background:#272527 ;
     height: 80px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 header img{
@@ -20,6 +27,18 @@ header img{
     cursor: pointer;
     margin-left: 10px;
 
+}
+
+.header__logo img{
+    transition: all 0.3s;
+}
+
+.header__logo img:hover{
+    transform: scale(1.2);
+}
+
+.navbar{
+    display: flex;
 }
 
 .navbar__list{
@@ -48,6 +67,30 @@ header img{
     font-weight: 800;
 }
 
+.navbar__list li:hover{
+    transform: scale(1.3);
+    transition: all .2s ease-in-out;
+}
+
+.navbar__list li a:hover{
+    color: rgb(187, 163, 163);
+}
+
+.navbar__list__logeo{
+    display: flex;
+    gap: 30px;
+    padding: 0px 120px;
+}
+
+.navbar__list__logeo a{
+    color: white;
+}
+
+.navbar__list__logeo li:hover{
+    transform: scale(1.4);
+    transition: all .3s ease-in-out ;
+}
+
 #hero{
     margin: auto;
     display: flex;
@@ -58,35 +101,193 @@ header img{
 }
 
 .hero__info{
-    margin: 200px ;
     display: flex;
     flex-direction: column;
-    
 }
 
-.hero__cards {
-    width: 1200px;
-    height: auto;
-    margin: 50px auto 0;
-    overflow: hidden;
+.hero__info h1{
+    font-size: 38px;
+    font-weight: 700;
+    text-align: center;
 }
 
-.hero__cards ul{
+.hero__info p{
+    margin: 30px 10px 0px;
+    font-size: 20px;
+    text-align: center;
+}
+
+.hero__info__btns{
+    margin: 20px 0px;
+    text-align: center;
+}
+
+.btns{
+    margin: 10px 10px;
+    padding: 9px 10px;
+    background-color: #272527;
+    border-radius: 10px;
+    color: aliceblue;
+    transition: all .3s ease-in-out;
+}
+
+.btns:hover{
+    background-color: aliceblue;
+    color: black;
+    border: #272527;
+}
+
+
+.hero__cards{
     display: flex;
-    padding: 0;
-    width: 400%;
-}
-
-.hero__cards li{
-    list-style: none;
-    width: 100%;
+    width: 600px;
+    height: 430px;
+    margin: 0px 50px;
 }
 
 .hero__cards img{
-    width: 350px;
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease ;
+}
+
+.hero__cards img:hover{
+    cursor: crosshair;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+#servicios{
+    margin-top: 200px;
+    padding: 70px 0px;
+    justify-content: center;
+    align-items: center;
+   
+   } 
+
+#servicios h2{
+    justify-content: center;
+    text-align: center;
+    font-size: 38px;
+    margin-bottom: 100px;
 }
 
 
+.servicios__card{
+    margin: auto;
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    align-items: center;
+}
 
+.servicios__card__tintura{
+    background: #272527;
+    padding: 20px;
+    border-radius: 10px;
+    
+}
 
+.card__img{
+    width: 200px;
+    height: 250px;
+}
 
+.card__info{
+    color: aliceblue;
+    display: flex;
+    gap: 78px;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.card__button span{
+    background: aliceblue;
+    margin-left: 60px;
+    padding: 3px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+
+.card__button:hover{
+    transform: scale(1.2);
+    transition: .2s ease-in-out;
+}
+
+.servicios__card__peinado{
+    background: #272527;
+    padding: 20px;
+    border-radius: 10px;
+}
+.servicios__card__balayage{
+    background: #272527;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+#aboutUs{
+    margin: 20px 50px;
+    margin-top: 100px;
+}
+
+#aboutUs h2{
+    font-size: 38px;
+    justify-content: center;
+    text-align: center;
+}
+
+#aboutUs p{
+    margin: 40px 10px;
+    font-size: 20px;
+
+}
+
+#footer{
+    background: #272527;
+    margin-top: 200px;
+}
+
+#footer h2{
+    font-size: 48px;
+    color: aliceblue;
+    margin-bottom: 40px;
+    justify-content: center;
+    text-align: center;
+}
+
+.contact__bottom{
+    display: flex;
+    color: aliceblue;
+    justify-content: space-between;
+    margin: 50px;
+
+}
+
+.contact__bottom__info p{
+    line-height: 50px;
+}
+
+#footer h3{
+    font-size: 38px;
+    color: aliceblue;
+    text-align: center;
+}
+
+.redes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.redes img{
+    width: 40px;
+    cursor: pointer;
+    background: #bebbb6;
+    gap: 40px;
+    border-radius: 9px;
+    margin: 20px ;
+}
