--- a/scripts/style.css
+++ b/scripts/style.css
@@ -244,6 +244,7 @@ header img{
 #aboutUs p{
     margin: 40px 10px;
     font-size: 20px;
+    padding: 0px 250px;
 
 }
 
@@ -265,6 +266,7 @@ header img{
     color: aliceblue;
     justify-content: space-between;
     margin: 50px;
+    padding: 0px 200px;
 
 }
 
